[project]
name = "home-project"
version = "0.1.0"
description = ""
authors = [{name = "Natalia Kozlova",email = "you@example.com"}]
requires-python = ">=3.14"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.14"

[tool.poetry.dependencies.lint]
flake8 = ">=7.3.0,<8.0.0"
black = ">=26.1.0,<27.0.0"
isort = ">=7.0.0,<8.0.0"
mypy = ">=1.19.1,<2.0.0"



[tool.black]
line-length = 119
target-version = ["py312"]
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.venv
  | \.idea
  | __pycache__
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude='venv'